--- a/css/headerproyecto.css
+++ b/css/headerproyecto.css
@@ -20,7 +20,7 @@ body {
   max-width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: red;
+	background-color: white;
 
   }
 
@@ -40,7 +40,7 @@ body {
 	margin-top: 25px;
 	width: 100px;
 	/*clip:rect(10px 200px 130px 100px);*/
-	left: 0px;
+	left: -10px;
 }
 
 .login {
