--- a/css/headerproyecto.css
+++ b/css/headerproyecto.css
@@ -163,7 +163,7 @@ text-align: left;
 }
 
 .footer_col_2{
-		width: 60%;
+		width: 30%;
 		margin-left: auto;
 		margin-right: auto;
 		position: relative;
@@ -172,6 +172,7 @@ text-align: left;
 		text-align: center;
 		display: block;
 		float:left;
+		left: 15%;
 }
 
 .footer_col_2 h4{
