--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,6 +16,7 @@ body {
 	margin-left: auto;
 	margin-right: auto;
   border-bottom: 1px black;
+  max-width: 1200px;
 }
 
 .container ul{
@@ -39,6 +40,7 @@ body {
 	left: 40px;
 }
 
+
 .login a::before{
 	position: relative;
 	content: "|";
@@ -50,6 +52,8 @@ body {
 #none::before {
 	display: none;
 }
+
+
 
 .main-nav ul{
 	width: 1000px;
@@ -85,7 +89,7 @@ body {
 	width: 300px;
 	position: absolute;
 	top:15px;
-	right: 20px;
+	right: 10px;
   -webkit-flex-flow: row wrap;
 	display: flex;
   justify-content: space-around;
@@ -103,7 +107,7 @@ body {
 }
 
 .home_content_1{
-  background-color: lightgreen;
+  background-color: none;
   height: auto;
 }
 
@@ -120,7 +124,9 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-color: transparent;
-  min-width: 320px;
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .texto_overlay{
@@ -141,6 +147,9 @@ body {
   background-color: #4CAF50;
   padding-top: 20px;
   padding-bottom: 20px;
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
   }
 
 .footer_top{
@@ -153,6 +162,7 @@ body {
 .columna1{
   height: 150px;
   width: 200px;
+  margin-right: 200px;
 
 }
 
@@ -164,6 +174,7 @@ body {
 .columna3{
   height: 150px;
   width: 200px;
+  margin-left: 200px;
 }
 
 .columna1 li{
@@ -194,4 +205,188 @@ footer a{
 .footer_bottom{
   justify-content: center;
   font-size: 0.8em;
+}
+
+
+/* Medium Devices, Desktops */
+    @media only screen and (max-width : 992px) {
+
+      .container{
+        background-color: lightgrey;
+      	margin-left: auto;
+      	margin-right: auto;
+        border-bottom: 1px black;
+        width: 950px;
+      }
+
+      .main-nav ul{
+      	margin-left: 250px;
+      	margin-bottom: 70px;
+      }
+
+      .main-nav li{
+      	flex-grow: 0;
+        display: flex;
+      }
+
+      .main-nav a{
+      	margin-left: 10px;
+      }
+
+      .home_main_image img{
+        width: 950px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      .container_footer{
+        background-color: #4CAF50;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        width: 950px;
+        margin-left: auto;
+        margin-right: auto;
+        }
+
+
+}
+
+
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
+
+  .container{
+    background-color: lightgrey;
+    margin-left: auto;
+    margin-right: auto;
+    border-bottom: 1px black;
+    width: 750px;
+  }
+
+  .main-header{
+    height: 120px;
+  }
+
+
+
+  .main-nav ul{
+    margin-left: 0px;
+    margin-top: 30px;
+
+    position: relative;
+    display: flex;
+  }
+
+  .main-nav li{
+    flex-grow: 0;
+    display: flex;
+    margin-left: -3px;
+  }
+
+  .main-nav a{
+    margin-left: 10px;
+    font-size: 18px;
+  }
+
+  .imagen{
+
+    position: absolute;
+    margin-top: 0px;
+    width: 200px;
+    left: 10px;
+
+  }
+
+  .home_main_image img{
+    width: 750px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .container_footer{
+    background-color: #4CAF50;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 750px;
+    margin-left: auto;
+    margin-right: auto;
+    }
+
+
+    .columna1{
+      height: 150px;
+      width: 230px  ;
+      margin-left: -30px;
+      margin-right: 0;
+
+    }
+
+    .columna2{
+      height: 150px;
+      width: 250;
+      margin-right: 0px;
+      margin-left: -30px;
+    }
+
+    .columna3{
+      height: 150px;
+      width:230px;
+      margin-left: 0px;
+      margin-right: -10px
+    }
+
+    .columna1 li{
+      list-style: none;
+      text-align: left;
+      padding-left: 10%;
+      margin-left: 2px;
+    }
+
+    .columna2 ul li{
+      list-style: none;
+      text-align: left;
+      padding-left: 10%;
+      margin-left: 0px;
+    }
+
+    .columna3 ul li{
+      list-style: none;
+      text-align: left;
+      padding-left: 10%;
+      margin-left: 2px;
+
+    }
+    .columna1 a{
+      font-size: 22px;
+      
+    }
+    .columna2 a{
+      font-size: 22px;
+    }
+
+    .columna3 a{
+      font-size: 22px;
+    }
+
+    footer label{
+      margin-left: 20px;
+      font-size: 20px;
+    }
+
+    footer a{
+      outline:0px;
+      text-decoration: none;
+      color: white;
+      font-size: 0.9em;
+
+    }
+
+    .footer_bottom{
+      margin-top: 20px;
+      margin-left: -20px;
+      font-size: 0.8em;
+    }
+
+
+
 }
